hw4/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp
  labels:
    app: kuber-dp
spec:
  replicas: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      labels:
        env: dev
    spec:
      containers:
      - name:  crud-app
        image: alexrev/labacrud
        ports:
          - containerPort: 8080
